--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshProFloatingText.cs" />
     <Compile Include="Assets\script\RoomSelect\MyNetworkManager.cs" />
+    <Compile Include="Assets\GraveYardDetailButtonUtil.cs" />
     <Compile Include="Assets\OKDialog.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
     <Compile Include="Assets\script\Battle\BattleMyMainCardUtil.cs" />
@@ -121,6 +122,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_DigitValidator.cs" />
     <Compile Include="Assets\script\RoomSelect\CardControllerTest.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatClient.cs" />
+    <Compile Include="Assets\GraveYardDetail.cs" />
     <Compile Include="Assets\script\EditModeScene\CardInfoManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
