--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Assets\script\RoomSelect\MLAPI_GUI.cs" />
     <Compile Include="Assets\script\Battle\DialogManager.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatParameterCode.cs" />
-    <Compile Include="Assets\EnemyMainCardsManager.cs" />
+    <Compile Include="Assets\script\Battle\EnemyMainCardsManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
     <Compile Include="Assets\Strix\Scripts\StrixEnterRoom.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
@@ -83,8 +83,8 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshProFloatingText.cs" />
     <Compile Include="Assets\script\RoomSelect\MyNetworkManager.cs" />
-    <Compile Include="Assets\GraveYardDetailButtonUtil.cs" />
-    <Compile Include="Assets\OKDialog.cs" />
+    <Compile Include="Assets\script\Battle\GraveYardDetailButtonUtil.cs" />
+    <Compile Include="Assets\script\Battle\OKDialog.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
     <Compile Include="Assets\script\Battle\BattleMyMainCardUtil.cs" />
     <Compile Include="Assets\script\Battle\DummyDeckAnimation.cs" />
@@ -122,7 +122,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_DigitValidator.cs" />
     <Compile Include="Assets\script\RoomSelect\CardControllerTest.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatClient.cs" />
-    <Compile Include="Assets\GraveYardDetail.cs" />
+    <Compile Include="Assets\script\Battle\GraveYardDetail.cs" />
     <Compile Include="Assets\script\EditModeScene\CardInfoManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
@@ -158,7 +158,7 @@
     <Compile Include="Assets\script\Util\CardNoToCardInfo.cs" />
     <Compile Include="Assets\PhotonChatApi\ChannelCreationOptions.cs" />
     <Compile Include="Assets\Strix\GUI\Scripts\StrixConnectGUI.cs" />
-    <Compile Include="Assets\DummyHandCardUtil.cs" />
+    <Compile Include="Assets\script\Battle\DummyHandCardUtil.cs" />
     <Compile Include="Assets\script\Util\EnumController.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatPeer.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
