--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Assets\script\Util\CardNoToCardInfo.cs" />
     <Compile Include="Assets\PhotonChatApi\ChannelCreationOptions.cs" />
     <Compile Include="Assets\Strix\GUI\Scripts\StrixConnectGUI.cs" />
+    <Compile Include="Assets\EffectBrainStormForDraw.cs" />
     <Compile Include="Assets\script\Battle\DummyHandCardUtil.cs" />
     <Compile Include="Assets\script\Util\EnumController.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatPeer.cs" />
