--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Assets\script\EditModeScene\DeckListManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\script\EditModeScene\CardInfoUtil.cs" />
+    <Compile Include="Assets\script\Util\SaveData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
