--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -184,7 +184,7 @@
     <Compile Include="Assets\PhotonChatApi\ChatOperationCode.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatChannel.cs" />
     <Compile Include="Assets\script\Battle\ExecuteActionTemp.cs" />
-    <Compile Include="Assets\CardInfoList.cs" />
+    <Compile Include="Assets\script\EditModeScene\CardInfoList.cs" />
     <Compile Include="Assets\script\Util\CardNoToCardInfo.cs" />
     <Compile Include="Assets\script\Battle\ConfirmEncoreKindsDialog.cs" />
     <Compile Include="Assets\PhotonChatApi\ChannelCreationOptions.cs" />
@@ -206,6 +206,7 @@
     <Compile Include="Assets\script\EditModeScene\DeckListManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\script\EditModeScene\CardInfoUtil.cs" />
+    <Compile Include="Assets\script\EditModeScene\LoadButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
