--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
     <Compile Include="Assets\script\Battle\BattleModeDeck.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
+    <Compile Include="Assets\script\Battle\EventAnimationManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TeleType.cs" />
     <Compile Include="Assets\script\Battle\TriggerCardAnimationForEnemy.cs" />
     <Compile Include="Assets\script\Battle\BattleEnemyMainCardUtil.cs" />
