Fix UI in EditMode]

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -83,7 +83,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatUserStatus.cs" />
     <Compile Include="Assets\script\Battle\BattleClockCardUtil.cs" />
-    <Compile Include="Assets\MainPowerUpDialog.cs" />
+    <Compile Include="Assets\script\Battle\MainPowerUpDialog.cs" />
     <Compile Include="Assets\script\Battle\PhaseDialog.cs" />
     <Compile Include="Assets\script\Battle\BattleGraveYardCardUtil.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark04.cs" />
@@ -111,8 +111,8 @@
     <Compile Include="Assets\script\Battle\MyStockCardsManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_UiFrameRateCounter.cs" />
     <Compile Include="Assets\script\Battle\MyLevelCardsManager.cs" />
-    <Compile Include="Assets\SulvageDialog.cs" />
-    <Compile Include="Assets\SulvageDialogBtnUtil.cs" />
+    <Compile Include="Assets\script\Battle\SulvageDialog.cs" />
+    <Compile Include="Assets\script\Battle\SulvageDialogBtnUtil.cs" />
     <Compile Include="Assets\script\Battle\LevelUpDialog.cs" />
     <Compile Include="Assets\script\Battle\StrixManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
@@ -168,7 +168,7 @@
     <Compile Include="Assets\script\Battle\BattleModeCard.cs" />
     <Compile Include="Assets\script\EditModeScene\cardInfo.cs" />
     <Compile Include="Assets\script\Battle\BattleEnemyMemoryCardUtil.cs" />
-    <Compile Include="Assets\SelectActionDialog.cs" />
+    <Compile Include="Assets\script\Battle\SelectActionDialog.cs" />
     <Compile Include="Assets\script\Battle\AnimationBasic.cs" />
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
     <Compile Include="Assets\script\EditModeScene\SearchFilter.cs" />
@@ -177,7 +177,7 @@
     <Compile Include="Assets\script\Menu\Menu.cs" />
     <Compile Include="Assets\script\Battle\EnemyClockCardsManager.cs" />
     <Compile Include="Assets\script\Battle\Phase.cs" />
-    <Compile Include="Assets\CreateDeckButton.cs" />
+    <Compile Include="Assets\script\RoomSelect\CreateDeckButton.cs" />
     <Compile Include="Assets\script\Battle\BattleGraveYardUtil.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatEventCode.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
