--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 ﻿Library/PackageCache/com.unity.burst@1.7.3/.Runtime/libburst-llvm-12.dylib
 Library/PackageCache/com.unity.burst@1.7.3/.Runtime/hostmac/lld
+Logs
+Logs/shadercompiler-AssetImportWorker0.log
+Logs/AssetImportWorker0.log
