--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Library/PackageCache/com.unity.burst@1.7.3/.Runtime/hostmac/lld
 Logs
 Logs/shadercompiler-AssetImportWorker0.log
 Logs/AssetImportWorker0.log
+Library/PlayerDataCache/Win64/Data/sharedassets0.assets.resS
