--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\script\EditModeScene\CardInfoUtil.cs" />
     <Compile Include="Assets\script\Battle\WaitDialog.cs" />
+    <Compile Include="Assets\script\Battle\LevelInstance.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
